2007-03-29  Rafael Laboissiere  <rafael@debian.org>

	* faq/Octave-FAQ.texi, interpreter/basics.txi,
	interpreter/emacs.txi, interpreter/func.tx, interpreter/var.txi:
	Make it clear that the old built-in LOADPATH is an internal
	variable, accessible through path ().
	Drop references to DEFAULT_LOADPATH.
	Chang references to the old built-in variables INFO_FILE and
	INFO_PROGRAM to the respective fucntions info_file and
	info_program.
	* refcard/refcard.tex: Drop LOADPATH from list of built-in variables.

2007-03-27  John W. Eaton  <jwe@octave.org>

	* Makefile.in, interpreter/Makefile.in, faq/Makefile.in,
	liboctave/Makefile.in, refcard/Makefile.in (dist):
	Use ln instead of $(LN_S).

2007-03-21  G. D. McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* interpreter/sparse.txi: Delete repeated word.

2007-03-20  G. D. McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* interpreter/sparse.txi: Clarify sparse matrix creation example.

2007-03-14  G. D. McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* interpreter/sparse.txi: Fix typo.

2007-02-26  From Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in, interpreter/Makefile.in, faq/Makefile.in,
	liboctave/Makefile.in, refcard/Makefile.in:
	Use $(LN_S) instead of ln or ln -s.

2007-02-21  David Bateman  <dbateman@free.fr>

	* interpreter/sparse.txi: Add functions sprank and normest to
	documentation.

2007-01-25  John W. Eaton  <jwe@octave.org>

	* interpreter/sparseimages.m: Don't call __gnuplot_x__ functions.

2006-11-17  John W. Eaton  <jwe@octave.org>

	* interpreter/sparseimages.m: Fix call to __plt3__.

2006-11-16  John W. Eaton  <jwe@octave.org>

	* interpreter/sparseimages.m (femimages): Use plot3.

2006-11-11  John W. Eaton  <jwe@octave.org>

	* interpreter/Makefile.in (%.texi : %.txi):
	Use $(simple-move-if-change-rule) here.

2006-10-29  John W. Eaton  <jwe@octave.org>

	* interpreter/Makefile.in (run-octave): Call it here.
	* interpreter/sparseimages.m (sparseimages): Don't call sleep here.
