@@ -1,3 +1,8 @@
+2007-04-03  John W. Eaton  <jwe@octave.org>
+
+	* Array.cc (assignN): Don't resize dimension if corresponding
+	index is empty.
+
 2007-04-02  John W. Eaton  <jwe@octave.org>
 
 	* dMatrix.h (Matrix::inverse): Reinstate versions without
